--- a/agrinho 1/index.html
+++ b/agrinho 1/index.html
@@ -15,7 +15,7 @@
             <img src="download.jpeg" alt="imagem do mosquito da dengue, retirada do google">
             <p class="container__botao">A dengue é transmitida atravez de um mosquito chamado Aedes aegypti. Que se encontra em recipientes descartados de maneira inadequada e que acabam acomulando água.</p>
             <h2 class="container__titulo">Sintomas</h2>
-            <p class="container__aviso">Seus sintomas variam mais os principais são: dor de cabeça, nos olhos e dores mosculares. Caso obtiver algum desses sintomas não se auto medicar, pois podre prejudicar sua saúde.</p>
+            <p class="container__aviso">Seus sintomas variam mais os principais são: dor de cabeça, nos olhos e dores mosculares. Caso obtiver algum desses sintomas não se auto medicar, pois pode prejudicar sua saúde.</p>
             <h3 class="container__aviso">Como podemos prevenir a dengue?</h3>
             <img src="44a1a370df7cd45df5d817505e8cbaa2.webp" alt="imagem contra a dengue">
             <p class="container__aviso">A maneira mais viavel de previnir a dengue é descartar os resíduos de maneira correta para que não acomulem água.</p>
